--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "electron-quick-start",
+  "productName": "electron-quick-start",
   "version": "1.0.0",
   "description": "A minimal Electron application",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "build:win32-x64": "npx electron-packager ./src --platform=win32 --arch=x64 --ignore='.git(ignore|modules)' --overwrite --icon=./assets/website.png.icns",
+    "build:linux-x64": "npx electron-packager ./src --platform=linux --arch=x64 --ignore='.git(ignore|modules)' --overwrite"
   },
   "repository": "https://github.com/electron/electron-quick-start",
   "keywords": [
@@ -17,6 +20,7 @@
   "author": "GitHub",
   "license": "CC0-1.0",
   "devDependencies": {
-    "electron": "^4.0.7"
+    "electron": "^4.0.7",
+    "electron-packager": "^13.1.1"
   }
 }
