--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "build:win32-x64": "npx electron-packager ./src --platform=win32 --arch=x64 --ignore='.git(ignore|modules)' --overwrite --icon=./assets/website.png.icns",
+    "build:win32-x64": "npx electron-packager . --platform=win32 --arch=x64 --ignore=\".git(ignore)\" --overwrite --icon=icon.icns",
     "build:linux-x64": "npx electron-packager ./src --platform=linux --arch=x64 --ignore='.git(ignore|modules)' --overwrite"
   },
   "repository": "https://github.com/electron/electron-quick-start",
