--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
+    "test": "mocha",
     "build:win32-x64": "npx electron-packager . --platform=win32 --arch=x64 --ignore=\".git(ignore)\" --overwrite --icon=icon.icns",
     "build:linux-x64": "npx electron-packager ./src --platform=linux --arch=x64 --ignore='.git(ignore|modules)' --overwrite"
   },
@@ -21,6 +22,8 @@
   "license": "CC0-1.0",
   "devDependencies": {
     "electron": "^4.0.7",
-    "electron-packager": "^13.1.1"
+    "electron-packager": "^13.1.1",
+    "mocha": "^6.0.2",
+    "spectron": "^5.0.0"
   }
 }
