--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "author": "GitHub",
   "license": "CC0-1.0",
   "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "electron": "^4.0.7",
     "electron-packager": "^13.1.1",
     "mocha": "^6.0.2",
